--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <title>First Git Project</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
     <h1>First Git Project</h1>
