--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         So many signs, so many signs
         You didn't even see the signs
         </p>
+        <p>C'est ciao</p>
   </body>
 </html>
